--- a/templates/base.html
+++ b/templates/base.html
@@ -5,10 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/static/css/map.css">
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <title>
       {% block title %} {% endblock %}
     </title>
-    {% block head %}{% endblock %}
+    <!-- {% block head %}{% endblock %} -->
   </head>
 
   <body>
