--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,8 @@
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+
     <title>
       {% block title %} {% endblock %}
     </title>
@@ -15,18 +17,25 @@
   </head>
 
   <body>
+
+
     {% with messages = get_flashed_messages() %}
     {% if messages %}
-      <ul class=flashes>
+      <div class=flashes>
       {% for message in messages %}
-        <li>{{ message }}</li>
+        <p>{{ message }}</p>
       {% endfor %}
-      </ul>
+      </div>
     {% endif %}
   {% endwith %}
     {% block body %}
 
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+
     {% endblock %}
+
   </body>
 
 </html>
