--- a/templates/map.html
+++ b/templates/map.html
@@ -8,15 +8,39 @@
 {% endblock%}
 
 {% block body %}
-  <h1>Driver Locations</h1>
+<nav class="navbar navbar-expand-lg --bs-body-bg-rgb ms-lg-4">
+  <div class="container-fluid">
+    <a class="navbar-brand fw-bold" href="/">SY</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Map</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link">New Employee</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
-  <section class="map">
-    <div id="map"></div>
-  </section>
+  <div id="map" class="m-auto object-fit-scale border rounded mb-4" heigh="90%" ></div>
 
-  <div id="grid"></div>
-  <a href="/newemployee">Add New Employee</a>
+    <div class="container mb-5">
+    <div id="grid" class="row justify-content-evenly mr-2">
 
+    </div>
+  </div>
+
+  <div class="row col-3 mx-auto">
+    <a class="btn btn-primary" href="/newemployee" role="button">Add New Employee</a>
+  </div>
   <script>
     const warehouses = [
       {
