--- a/templates/sign_up_form.html
+++ b/templates/sign_up_form.html
@@ -1,12 +1,41 @@
 {% extends 'base.html'%}
 {% block title%} Sign Up Here {% endblock %}
 {% block body %}
-  <h1>Welcome to Mapin</h1>
-  <form action="/signup" method="POST">
-    Email: <input type="email" name="email" id="email">
-    <br>
-    Password: <input type="password" name="password" id="password">
-    <br>
-    <button type="submit">Create Account</button>
-  </form>
+<nav class="navbar --bs-body-bg-rgb ms-lg-4">
+  <div class="container-fluid">
+    <a class="navbar-brand fw-bold" href="/">SY</a>
+  </div>
+</nav>
+
+
+<div class="col-sm-4 card mx-auto my-auto shadow p-3 mb-5 bg-body-tertiary rounded border border-secondary-subtle">
+  <img src="/static/img/business-card-svgrepo-com.svg" class="card-img-top" width="250px" height="250px">
+
+  <div class="card-body">
+    <h5 class="card-title text-center mb-4">Welcome to SY</h5>
+    <form action="/signup" method="post">
+      <div class="row g-3 align-items-center mb-3">
+        <div class="col-auto col-3">
+          <label for="email" class="col-form-label">Email:</label>
+        </div>
+        <div class="col-auto col-9">
+          <input type="email" id="email" name="email" class="form-control" aria-describedby="email">
+        </div>
+      </div>
+      <div class="row g-3 align-items-center mb-4">
+        <div class="col-auto col-3">
+          <label for="password" class="col-form-label">Password:</label>
+        </div>
+        <div class="col-auto col-9">
+          <input type="password" id="password" name="password" class="form-control" aria-describedby="password">
+        </div>
+      </div>
+      <div class="col text-center">
+        <button class="btn btn-primary align-self-center">Create Account</button>
+      </div>
+    </form>
+  </div>
+</div>
+
+
 {% endblock %}
