--- a/templates/base.html
+++ b/templates/base.html
@@ -9,33 +9,26 @@
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-
-    <title>
-      {% block title %} {% endblock %}
-    </title>
-    <!-- {% block head %}{% endblock %} -->
+    <title>{% block title %} {% endblock %}</title>
   </head>
 
   <body>
+    {% for msg in get_flashed_messages() %}
+      <p class="flash-msg text-center">
+        {{msg}}
+      </p>
+    {% endfor %}
 
-
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
-      <div class=flashes>
-      {% for message in messages %}
-        <p>{{ message }}</p>
-      {% endfor %}
-      </div>
-    {% endif %}
-  {% endwith %}
     {% block body %}
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+
+
+
 
     {% endblock %}
-
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js" integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa" crossorigin="anonymous"></script>
   </body>
-
 </html>
