--- a/templates/map.html
+++ b/templates/map.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %}
-{% block title %} Mapping {% endblock %}
 
-{% block head%}
+{% block head %}
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
 <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+<link rel="stylesheet" href="css/bootstrap.css" />
+{% block title %} Mapping {% endblock %}
 {% endblock%}
 
 {% block body %}
@@ -20,14 +21,23 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Map</a>
+          <a class="nav-link" href="/maps">Map</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link">New Employee</a>
+          <a class="nav-link" href="/newemployee">New Employee</a>
         </li>
       </ul>
     </div>
-  </div>
+
+        {% if current_user.is_authenticated %}
+        <!-- <div class="dropdown btn-sm me-5"> -->
+          <div class="d-inline-block">
+            <img src="/static/img/default.svg" width="50px" height="40px" class="btn" type="button" aria-expanded="false">
+            <a href="/" class="link-underline link-underline-opacity-0 link-dark">Logout</a>
+          </div>
+        <!-- </div> -->
+        {% endif %}
+      </div>
 </nav>
 
   <div id="map" class="m-auto object-fit-scale border rounded mb-4" heigh="90%" ></div>
@@ -44,22 +54,16 @@
   <script>
     const warehouses = [
       {
-        // "employee_id": 1,
-        // "order_id": 1
         "warehouse_name": "Griffth",
         "warehouse_location": "2800 E Observatory Ave, Los Angeles, CA 90027",
         "coord": {"lat": 34.118378, "lng": -118.300352}
       },
       {
-        // "employee_id": 2,
-        // "order_id": [10,11,12,13,14,15,16,17,18],
         "warehouse_name": "Urban Light",
         "warehouse_location": "5905 Wilshire Blvd, Los Angeles, CA 90036",
         "coord": {"lat": 34.064251, "lng": -118.360565}
       },
       {
-        // "employee_id": 3,
-        // "order_id": [19,20,21,22,23,24,25,26,27],
         "warehouse_name": "Sacramento Zoo",
         "warehouse_location": "3930 W Land Park Dr, Sacramento, CA 95822",
         "coord": {"lat": 38.540180, "lng": -121.500038}
@@ -127,5 +131,4 @@
 
 <script type="text/jsx" src="/static/js/emp.jsx"></script>
 <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyABVLqKXuX8k_JDyL9dWR7jIZxs_XV9fhg&callback=initMap"></script>
-
 {% endblock %}
