--- a/templates/newemployee.html
+++ b/templates/newemployee.html
@@ -2,17 +2,104 @@
 {% block title %} Add new emp {% endblock %}
 {% block body %}
 
-<form action="/newemployee" method="POST">
-  <p>Add a new Employee</p>
-  Name: <input type="text" name="name" id="name" required>
-  <br>
-  Cell: <input type="tel" name="cell" id="cell" pattern="\([0-9]{3}\)-[0-9]{3}-[0-9]{4}" placeholder="(123)-456-7890" required>
-  <br>
-  Email: <input type="email" name="email" id="email">
-  <br>
-  Address: <input type="text" name="address" id="address" required>
-  <br>
-  <input type="submit">
+<nav class="navbar navbar-expand-lg --bs-body-bg-rgb ms-lg-4">
+  <div class="container-fluid">
+    <a class="navbar-brand fw-bold" href="/">SY</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/maps">Map</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<h5 class="col-6 mx-auto text-center mt-4 mb-3">Add New Employee Details</h5>
+
+<!-- <form action="/newemployee" method="POST" class="col-6 mx-auto align-middle">
+  <div class="row g-2 align-items-center mb-3 text-center">
+    <div class="col-auto col-3">
+      <label for="name" class="col-form-label">Name:</label>
+    </div>
+    <div class="col-auto col-9">
+      <input type="text" id="name" name="name" class="form-control" aria-describedby="name" placeholder="Jane D" required>
+    </div>
+  </div>
+  <div class="row g-3 align-items-center mb-3 text-center">
+    <div class="col-auto col-3">
+      <label for="cell" class="col-form-label">Cell:</label>
+    </div>
+    <div class="col-auto col-9">
+      <input class="form-control" type="tel" name="cell" id="cell" pattern="\([0-9]{3}\)-[0-9]{3}-[0-9]{4}" placeholder="(123)-456-7890" required>
+      <div id="telHelp" class="form-text">cell format must be followed</div>
+    </div>
+  </div>
+  <div class="row g-3 align-items-center mb-3 text-center">
+    <div class="col-auto col-3">
+      <label for="exampleFormControlInput1" class="form-label">Email:</label>
+    </div>
+    <div class="col-auto col-9">
+      <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+    </div>
+  </div>
+  <div class="row g-3 align-items-center mb-3 text-center">
+    <div class="col-auto col-3">
+      <label for="address" class="form-label">Address:</label>
+    </div>
+    <div class="col-auto col-9">
+      <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="599 Wrangler Lane, Los Angeles, CA 90006">
+    </div>
+  </div>
+
+
+  <div class="col text-center mt-5">
+    <button class="btn btn-primary align-self-center" type="submit">Add New Driver</button>
+  </div>
+</form> -->
+
+<form action="/newemployee" method="POST" class="row g-3 col-6 mx-auto">
+  <div class="col-12">
+    <label for="inputEmail4" class="form-label">Name</label>
+    <input type="text" class="form-control" id="inputEmail4" name="name" required>
+  </div>
+  <div class="col-6">
+    <label for="inputPassword4" class="form-label">Cell</label>
+    <input type="text" class="form-control" id="inputPassword4" name="cell" required>
+  </div>
+  <div class="col-6">
+    <label for="inputPassword4" class="form-label">Total packages delivered</label>
+    <input type="number" class="form-control" id="inputPassword4" name="packages" value="0">
+  </div>
+  <div class="col-12">
+    <label for="inputAddress" class="form-label">Address</label>
+    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St" name="address1" required>
+  </div>
+  <div class="col-12">
+    <label for="inputAddress2" class="form-label">Address 2</label>
+    <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor" name="address2">
+  </div>
+  <div class="col-md-6">
+    <label for="inputCity" class="form-label">City</label>
+    <input type="text" class="form-control" id="inputCity" name="city" required>
+  </div>
+  <div class="col-md-4">
+    <label for="inputState" class="form-label">State</label>
+    <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor" name="address2" value="CA" required>
+  </div>
+  <div class="col-md-2 mb-2">
+    <label for="inputZip" class="form-label">Zip</label>
+    <input type="text" class="form-control" id="inputZip" name="zip" required>
+  </div>
+  <div class="col mt-3 mx-auto">
+    <button type="submit" class="btn btn-primary col-12">Add New Employee</button>
+  </div>
 </form>
 
 
