--- a/templates/newemployee.html
+++ b/templates/newemployee.html
@@ -25,7 +25,7 @@
     {% if current_user.is_authenticated %}
       <div class="d-inline-block">
         <img src="/static/img/default.svg" width="50px" height="40px" class="btn" type="button" aria-expanded="false">
-        <a href="/" class="link-underline link-underline-opacity-0 link-dark">Logout</a>
+        <a href="/logout" class="link-underline link-underline-opacity-0 link-dark">Logout</a>
       </div>
     {% endif %}
   </div>
