--- a/templates/empdetails.html
+++ b/templates/empdetails.html
@@ -11,9 +11,6 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <!-- <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li> -->
         <li class="nav-item">
           <a class="nav-link" href="/maps">Map</a>
         </li>
@@ -25,7 +22,7 @@
     {% if current_user.is_authenticated %}
       <div class="d-inline-block">
         <img src="/static/img/default.svg" width="50px" height="40px" class="btn" type="button" aria-expanded="false">
-        <a href="/" class="link-underline link-underline-opacity-0 link-dark">Logout</a>
+        <a href="/logout" class="link-underline link-underline-opacity-0 link-dark">Logout</a>
       </div>
     {% endif %}
   </div>
