--- a/templates/map.html
+++ b/templates/map.html
@@ -31,7 +31,7 @@
     {% if current_user.is_authenticated %}
       <div class="d-inline-block">
         <img src="/static/img/default.svg" width="50px" height="40px" class="btn" type="button" aria-expanded="false">
-        <a href="/" class="link-underline link-underline-opacity-0 link-dark">Logout</a>
+        <a href="/logout" class="link-underline link-underline-opacity-0 link-dark">Logout</a>
       </div>
     {% endif %}
   </div>
@@ -125,7 +125,6 @@
     }
   </script>
 
-
 <script type="text/jsx" src="/static/js/emp.jsx"></script>
-<script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyABVLqKXuX8k_JDyL9dWR7jIZxs_XV9fhg&callback=initMap"></script>
+<script async src="https://maps.googleapis.com/maps/api/js?key={{api_key}}&callback=initMap"></script>
 {% endblock %}
