--- a/templates/empdetails.html
+++ b/templates/empdetails.html
@@ -1,53 +1,90 @@
-{% extends 'base.html' %}
-
-{% block title %} Employee Details {% endblock %}
-
-{% block body%}
+{% extends 'base.html' %} {% block title %} Employee Details {% endblock %} {%
+block body%}
 <nav class="navbar navbar-expand-lg --bs-body-bg-rgb ms-lg-4">
   <div class="container-fluid">
-    <a class="navbar-brand fw-bold" href="/">SY</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <a class="navbar-brand fw-bold" href="/maps">SY</a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <!-- <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li> -->
         <li class="nav-item">
-          <a class="nav-link" href="/maps">Map</a>
+          <a class="nav-link" href="/maps">Distribution</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/newemployee">New Employee</a>
+          <a class="nav-link" href="/newemployee">Employee</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/schedule">Schedule</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/newemployee">Statistics</a>
         </li>
       </ul>
     </div>
     {% if current_user.is_authenticated %}
-      <div class="d-inline-block">
-        <img src="/static/img/default.svg" width="50px" height="40px" class="btn" type="button" aria-expanded="false">
-        <a href="/logout" class="link-underline link-underline-opacity-0 link-dark">Logout</a>
-      </div>
+    <div class="d-inline-block">
+      <img
+        src="/static/img/default.svg"
+        width="50px"
+        height="40px"
+        class="btn"
+        type="button"
+        aria-expanded="false"
+      />
+      <a
+        href="/logout"
+        class="link-underline link-underline-opacity-0 link-dark"
+        >Logout</a
+      >
+    </div>
     {% endif %}
   </div>
 </nav>
 
-<form action="/maps/{{id}}" method="POST">
-  <div class="card mt-4 mx-auto" style="width: 18rem;">
+<form action="/maps/{{id}}" method="POST" class="mb-5">
+  <div class="card mt-4 mx-auto" style="width: 18rem">
     {% if picture != None: %}
-      <img src="{{picture}}" class="card-img-top" alt="profilePic">
+    <img src="{{picture}}" class="card-img-top" alt="profilePic" />
     {% else: %}
-      <img src="/static/img/default.svg" class="card-img-top pt-2 pb-2" alt="profilePic">
+    <img
+      src="/static/img/default.svg"
+      class="card-img-top pt-2 pb-2"
+      alt="profilePic"
+    />
     {% endif%}
     <div class="card-body">
       <h4 class="card-title text-center">{{name}}</h4>
     </div>
     <ul class="list-group list-group-flush">
       <li class="list-group-item">EmpID: <b>{{id}}</b></li>
-      <li class="list-group-item">Total packages deliverd: <b>{{delivered}}</b></li>
+      <li class="list-group-item">
+        Total packages deliverd: <b>{{delivered}}</b>
+      </li>
     </ul>
     <div class="card-body row justify-content-evenly">
       <div class="col-4">
-        <a href="/maps/{{id}}/edit" class="btn btn-info card-link col-12">Edit</a>
+        <a href="/maps/{{id}}/edit" class="btn btn-info card-link col-12"
+          >Edit</a
+        >
       </div>
       <div class="col-4">
-        <input type="submit" value="Delete" class="btn btn-warning card-link col-12">
+        <input
+          type="submit"
+          value="Delete"
+          class="btn btn-warning card-link col-12"
+        />
       </div>
     </div>
   </div>
