--- a/templates/map.html
+++ b/templates/map.html
@@ -1,130 +1,174 @@
-{% extends 'base.html' %}
-
-{% block head %}
+{% extends 'base.html' %} {% block head %}
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
 <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+<link rel="stylesheet" href="/static/css/map.css" />
 <link rel="stylesheet" href="css/bootstrap.css" />
-{% block title %} Mapin Location {% endblock %}
-{% endblock%}
-
-{% block body %}
+{% block title %} Mapin Location {% endblock %} {% endblock%} {% block body %}
 <nav class="navbar navbar-expand-lg --bs-body-bg-rgb ms-lg-4">
   <div class="container-fluid">
-    <a class="navbar-brand fw-bold" href="/">SY</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <a class="navbar-brand fw-bold" href="/maps">SY</a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <!-- <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li> -->
         <li class="nav-item">
-          <a class="nav-link" href="/maps">Map</a>
+          <a class="nav-link" href="/maps">Distribution</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/newemployee">New Employee</a>
+          <a class="nav-link" href="/newemployee">Employee</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/schedule">Schedule</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/chart">Statistics</a>
         </li>
       </ul>
     </div>
     {% if current_user.is_authenticated %}
-      <div class="d-inline-block">
-        <img src="/static/img/default.svg" width="50px" height="40px" class="btn" type="button" aria-expanded="false">
-        <a href="/logout" class="link-underline link-underline-opacity-0 link-dark">Logout</a>
-      </div>
+    <div class="d-inline-block">
+      <img
+        src="/static/img/default.svg"
+        width="50px"
+        height="40px"
+        class="btn"
+        type="button"
+        aria-expanded="false"
+      />
+      <a
+        href="/logout"
+        class="link-underline link-underline-opacity-0 link-dark"
+        >Logout</a
+      >
+    </div>
     {% endif %}
   </div>
 </nav>
 
-  <div id="map" class="m-auto object-fit-scale border rounded mb-4" heigh="90%" >
-  </div>
-  <div class="container mb-3">
-    <div id="grid" class="row justify-content-evenly mr-2">
-    </div>
-  </div>
+<div
+  id="map"
+  class="m-auto object-fit-scale border rounded mb-4"
+  heigh="90%"
+></div>
+<div class="container mb-3">
+  <div id="grid" class="row justify-content-evenly mr-2"></div>
+</div>
 
-  <div class="row col-3 mx-auto mb-5">
-    <a class="btn btn-primary" href="/newemployee" role="button">Add New Employee</a>
-  </div>
+<div class="row col-3 mx-auto mb-5">
+  <a class="btn btn-primary" href="/newemployee" role="button"
+    >Add New Employee</a
+  >
+</div>
 
-  <script>
-    const warehouses = [
-      {
-        "warehouse_name": "Griffth",
-        "warehouse_location": "2800 E Observatory Ave, Los Angeles, CA 90027",
-        "coord": {"lat": 34.118378, "lng": -118.300352}
-      },
-      {
-        "warehouse_name": "Urban Light",
-        "warehouse_location": "5905 Wilshire Blvd, Los Angeles, CA 90036",
-        "coord": {"lat": 34.064251, "lng": -118.360565}
-      },
-      {
-        "warehouse_name": "Sacramento Zoo",
-        "warehouse_location": "3930 W Land Park Dr, Sacramento, CA 95822",
-        "coord": {"lat": 38.540180, "lng": -121.500038}
-      },
-      {
-        "warehouse_name": "Willow Park",
-        "warehouse_location": "1320 Willow St, San Jose, CA 95125",
-        "coord": {"lat": 37.304850, "lng": -121.908920}
-      }
-    ]
+<script>
+  const warehouses = [
+    {
+      warehouse_name: "Griffth",
+      warehouse_location: "2800 E Observatory Ave, Los Angeles, CA 90027",
+      coord: { lat: 34.118378, lng: -118.300352 },
+    },
+    {
+      warehouse_name: "Urban Light",
+      warehouse_location: "5905 Wilshire Blvd, Los Angeles, CA 90036",
+      coord: { lat: 34.064251, lng: -118.360565 },
+    },
+    {
+      warehouse_name: "Sacramento Zoo",
+      warehouse_location: "3930 W Land Park Dr, Sacramento, CA 95822",
+      coord: { lat: 38.54018, lng: -121.500038 },
+    },
+    {
+      warehouse_name: "Willow Park",
+      warehouse_location: "1320 Willow St, San Jose, CA 95125",
+      coord: { lat: 37.30485, lng: -121.90892 },
+    },
+  ];
 
-    async function initMap() {
-      const { Map, InfoWindow } = await google.maps.importLibrary("maps");
-      const { AdvancedMarkerElement, PinElement } = await google.maps.importLibrary("marker");
-      const infoWindow = new InfoWindow();
+  async function initMap() {
+    const { Map, InfoWindow } = await google.maps.importLibrary("maps");
+    const { AdvancedMarkerElement, PinElement } =
+      await google.maps.importLibrary("marker");
+    const infoWindow = new InfoWindow();
 
-      // Map and its center
-      const la = {lat:34.052235, lng:-118.243683};
-      const map = new google.maps.Map(
-      document.querySelector('#map'), {zoom:10, center:la, mapId:'79bbee021714810b'}
-      );
+    // Map and its center
+    const la = { lat: 34.052235, lng: -118.243683 };
+    const map = new google.maps.Map(document.querySelector("#map"), {
+      zoom: 10,
+      center: la,
+      mapId: "79bbee021714810b",
+    });
 
-      //Center LA Marker
-      let laMarker = new google.maps.Marker({position:la, map:map});
-      laMarker.addListener("click", () => {
+    //Center LA Marker
+    let laMarker = new google.maps.Marker({ position: la, map: map });
+    laMarker.addListener("click", () => {
+      infoWindow.open({
+        anchor: laMarker,
+        map,
+      });
+      infoWindow.setContent("You are in LA!");
+    });
+    //Warehouses Marker
+    for (let warehouse of warehouses) {
+      let location = warehouse["coord"];
+      let warehouseMarker = new google.maps.Marker({
+        position: location,
+        map: map,
+        icon: {
+          url: "/static/img/warehouse.svg",
+          scaledSize: { width: 50, height: 50 },
+        },
+      });
+      warehouseMarker.addListener("click", () => {
         infoWindow.open({
-          anchor: laMarker,
+          anchor: warehouseMarker,
           map,
         });
-        infoWindow.setContent("You are in LA!")
+        infoWindow.setContent(`${warehouse["warehouse_name"]} Warehouse`);
       });
-      //Warehouses Marker
-      for (let warehouse of warehouses){
-        let location = warehouse["coord"];
-        let warehouseMarker = new google.maps.Marker({position: location, map:map, icon:{url:'/static/img/warehouse.svg', scaledSize: {width: 50, height: 50,}}})
-        warehouseMarker.addListener("click", () => {
-          infoWindow.open({
-            anchor: warehouseMarker,
-            map,
-          });
-        infoWindow.setContent(`${warehouse['warehouse_name']} Warehouse`)
-        });
-      }
-      //Driver Marker
-      fetch('/map')
-        .then((response) => response.json())
-        .then((responseData) => {
-          for(let i=0; i<responseData[1].length; i++){
-            let driverMarker = new google.maps.Marker({position: responseData[1][i], map:map, icon:{url:'/static/img/truck.svg', scaledSize: {width: 30, height: 30,}}})
-            driverMarker.addListener("click", ({ domEvent, latLng }) => {
-              const { target } = domEvent;
-              infoWindow.close();
-              for(let j=0; j<responseData[0].length; j++){
-                  if(responseData[0][j].id == responseData[1][i].id){
-                    infoWindow.setContent(`Name: ${responseData[0][j].name} <br/> Cell: ${responseData[0][j].cell}`);
-                    infoWindow.open(driverMarker.map, driverMarker);
-                  }
-              }
-            });
-          }
-        })
     }
-  </script>
+    //Driver Marker
+    fetch("/map")
+      .then((response) => response.json())
+      .then((responseData) => {
+        for (let i = 0; i < responseData[1].length; i++) {
+          let driverMarker = new google.maps.Marker({
+            position: responseData[1][i],
+            map: map,
+            icon: {
+              url: "/static/img/truck.svg",
+              scaledSize: { width: 30, height: 30 },
+            },
+          });
+          driverMarker.addListener("click", ({ domEvent, latLng }) => {
+            const { target } = domEvent;
+            infoWindow.close();
+            for (let j = 0; j < responseData[0].length; j++) {
+              if (responseData[0][j].id == responseData[1][i].id) {
+                infoWindow.setContent(
+                  `Name: ${responseData[0][j].name} <br/> Cell: ${responseData[0][j].cell}`
+                );
+                infoWindow.open(driverMarker.map, driverMarker);
+              }
+            }
+          });
+        }
+      });
+  }
+</script>
 
 <script type="text/jsx" src="/static/js/emp.jsx"></script>
-<script async src="https://maps.googleapis.com/maps/api/js?key={{api_key}}&callback=initMap"></script>
+<script
+  async
+  src="https://maps.googleapis.com/maps/api/js?key={{api_key}}&callback=initMap"
+></script>
 {% endblock %}
