"modified file formats"

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,8 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
     <title>{% block title %} {% endblock %}</title>
+    {% block head %} {% endblock %}
+    {% block style%} {% endblock%}
   </head>
 
   <body class="bg-light">
@@ -41,6 +43,6 @@
     ></script>
   </body>
   <footer class="text-center">
-    <span>@ All Rights Reserved.</span>   <span>SY</span>
+    <span>@ All Rights Reserved.</span> <span>SY</span>
   </footer>
 </html>
