--- a/templates/empEdit.html
+++ b/templates/empEdit.html
@@ -1,5 +1,8 @@
-{% extends 'base.html' %} {% block title %} Edit Employee Information {%
-endblock %} {% block body %}
+{% extends 'base.html' %}
+
+{% block title %} Edit Employee Information {% endblock %}
+
+{% block body %}
 <nav class="navbar navbar-expand-lg --bs-body-bg-rgb ms-lg-4">
   <div class="container-fluid">
     <a class="navbar-brand fw-bold" href="/maps">SY</a>
@@ -16,9 +19,6 @@ endblock %} {% block body %}
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <!-- <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li> -->
         <li class="nav-item">
           <a class="nav-link" href="/maps">Distribution</a>
         </li>
