--- a/templates/map.html
+++ b/templates/map.html
@@ -1,10 +1,14 @@
-{% extends 'base.html' %} {% block head %}
+{% extends 'base.html' %}
+{% block title %} Locations {% endblock %}
+
+{% block head %}
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
 <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
 <link rel="stylesheet" href="/static/css/map.css" />
-<link rel="stylesheet" href="css/bootstrap.css" />
-{% block title %} Mapin Location {% endblock %} {% endblock%} {% block body %}
+{% endblock%}
+
+{% block body %}
 <nav class="navbar navbar-expand-lg --bs-body-bg-rgb ms-lg-4">
   <div class="container-fluid">
     <a class="navbar-brand fw-bold" href="/maps">SY</a>
@@ -167,8 +171,5 @@
 </script>
 
 <script type="text/jsx" src="/static/js/emp.jsx"></script>
-<script
-  async
-  src="https://maps.googleapis.com/maps/api/js?key={{api_key}}&callback=initMap"
-></script>
+<script async src="https://maps.googleapis.com/maps/api/js?key={{api_key}}&callback=initMap"></script>
 {% endblock %}
