--- a/templates/signUpForm.html
+++ b/templates/signUpForm.html
@@ -1,5 +1,8 @@
-{% extends 'base.html'%} {% block title%} Sign Up Here {% endblock %} {% block
-body %}
+{% extends 'base.html'%}
+
+{% block title%} Sign Up Here {% endblock %}
+
+{% block body %}
 <nav class="navbar --bs-body-bg-rgb ms-lg-4">
   <div class="container-fluid">
     <a class="navbar-brand fw-bold" href="/maps">SY</a>
